--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-icons": "^4.7.1",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.7.0",
-    "react-spinners": "^0.13.8"
+    "react-spinners": "^0.13.8",
+    "tw-elements": "^1.0.0-alpha13"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
