--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.13",
+    "@mui/styled-engine-sc": "^5.11.11",
+    "daisyui": "^2.51.4",
     "dotenv": "^16.0.3",
     "firebase": "^9.16.0",
     "react": "^18.2.0",
@@ -18,6 +24,7 @@
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.7.0",
     "react-spinners": "^0.13.8",
+    "styled-components": "^5.3.9",
     "tw-elements": "^1.0.0-alpha13"
   },
   "devDependencies": {
