--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "daisyui": "^2.51.4",
     "dotenv": "^16.0.3",
     "firebase": "^9.16.0",
+    "jsonwebtoken": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.0",
