--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.43.0",
     "react-icons": "^4.8.0",
     "react-loader-spinner": "^5.3.4",
+    "react-qr-code": "^2.0.11",
     "react-router-dom": "^6.7.0",
     "react-spinners": "^0.13.8",
     "react-virtuoso": "^4.1.0",
