--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@mui/lab": "^5.0.0-alpha.124",
     "@mui/material": "^5.11.14",
     "@mui/styled-engine-sc": "^5.11.11",
+    "bootstrap": "^5.3.0",
     "daisyui": "^2.51.4",
     "dotenv": "^16.0.3",
     "firebase": "^9.16.0",
     "jsonwebtoken": "^9.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.0",
     "react-icons": "^4.8.0",
