--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/lab": "^5.0.0-alpha.124",
     "@mui/material": "^5.11.14",
     "@mui/styled-engine-sc": "^5.11.11",
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "daisyui": "^2.51.4",
     "dotenv": "^16.0.3",
